# otads

./: CMakeLists.txt
cmake/: OTADSConfig.cmake.in  UseOTADS.cmake
distro/debian/: changelog  control  rules
distro/rpm/: otads.spec
distro/windows/: installer.nsi
doc/: CMakeLists.txt  GenericInformation.tex.in  OTADS_Developer.tex  OTADS_Documentation.sty  OTADS_Documentation.tex  OTADS_ExamplesGuide.tex  OTADS_ReferenceGuide.tex  OTADS_UseCasesGuide.tex  OTADS_UserManual.tex  OTADS_Validation.tex  OTADS_summary.tex  OTADS_title.tex  architecture.xmi
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt  OTADSprivate.hxx
lib/src/: AdaptiveDirectionalSampling.cxx  AdaptiveDirectionalSampling.hxx  CMakeLists.txt  QuadrantSampling.cxx  QuadrantSampling.hxx
lib/test/: CMakeLists.txt  t_AdaptiveDirectionalSampling_std.cxx  t_QuadrantSampling_std.cxx
python/src/: AdaptiveDirectionalSampling.i  CMakeLists.txt  __init__.py  otads_module.i
python/test/: CMakeLists.txt  h3_valid.diff  t_AdaptiveDirectionalSampling_flood.py  t_AdaptiveDirectionalSampling_hyperplane.py  t_AdaptiveDirectionalSampling_std.py
